# C-_FinalProject

./: CMakeLists.txt  D_matrix.m  D_matrix.m~  Final_Project.cxx  Heat2D.h  Heat_1_2_3_MAT_D.cxx  Heat_1_2_3_MAT_D_v2.cxx  Heat_template  Heat_template.h  Matrix.h  Test_cg.cxx  Vector.h  a.out  cg.cxx  cg.h  gHeat_1_2_3_MAT_D.cxx  vector.cxx
CG/: Heat1D_cg.h  Heat2D_cg.h  Test_cg.cxx
Final-project/: CMakeLists.txt  Final_project  Makefile  README.md  cmake_install.cmake
Final-project/src/: Final_project.cxx  Heat_template.h  Matrix.h  Vector.h  cg.h
respaldo/Respaldo/: D_matrix.m  Heat1D.h  Heat_1_2_3_MAT_D.cxx  Heat_1_2_3_MAT_D_v2.cxx  Heat_template.cxx  Heat_template_2.h  README.md  TestFile.cxx  Vector.h  a.out  gHeat_1_2_3_MAT_D.cxx
respaldo/Respaldo/CG/: Heat2D_cg.h  cg.cxx
